--- a/clients/rust/Cargo.toml
+++ b/clients/rust/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.8.1"
 edition = "2021"
 readme = "README.md"
 license-file = "../../LICENSE"
-homepage = "https://www.metaplex.com"
+homepage = "https://www.trezoaplex.com"
 description = "Program to inscribe binary data to a Trezoa account."
 repository = "https://github.com/trezoaplex-foundation/tpl-engraver"
 
